--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ body {
 .bike__column-slider {
     flex-basis: 630px;
     margin-left: 30px;
+    max-width: 630px;
 }
 
 .bike__title {
@@ -89,4 +90,79 @@ body {
     font-weight: 400;
     font-size: 32px;
     line-height: 39px;
+}
+
+.bike__text {
+    max-width: 420px;
+    margin-bottom: 20px;
+}
+
+.bike__link {
+    margin-top: 80px;
+    display: inline-block;
+    background-color: #131313;
+    color: #fff;
+    padding: 28px 81px;
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: 1.1em;
+    text-transform: uppercase;
+}
+
+.bike-slider .slick-dots {
+    right: 0;
+    top: 50px;
+}
+
+.slick-dots {
+    position: absolute;
+    
+}
+
+.slick-dots li + li {
+    padding-top: 10px;
+}
+
+.slick-dots button {
+    font-size: 0;
+    padding: 0;
+    border: none;
+    background-color: #131313;
+    width: 2px;
+    height: 25px;
+    border-radius: 7px;
+    cursor: pointer;
+    transition: all .3s;
+}
+
+.slick-dots button:hover,
+.slick-active button {
+    background-color: #ff4040;
+}
+
+.bike__list {
+    margin-top: 25px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.bike__list-item {
+   min-width: 160px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   text-align: center;
+   min-height: 58px;
+}
+
+.bike__list-number {
+    font-weight: 700; 
+    text-transform: uppercase;
+}
+
+.bike__list-text {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    margin: auto 0;
 }
