--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html {
+   scroll-behavior: smooth; 
+}
+
 ul {
     padding: 0;
     margin: 0;
@@ -67,7 +71,7 @@ body {
 }
 
 .bike {
-    padding: 100px 0 150px;
+    padding: 100px 0 0;
 }
 
 .bike__inner {
@@ -111,6 +115,11 @@ body {
     line-height: 24px;
     letter-spacing: 1.1em;
     text-transform: uppercase;
+    transition: all .3s;
+}
+
+.bike__link:hover {
+    background-color: #ff4040;
 }
 
 .bike-slider .slick-dots {
@@ -172,7 +181,8 @@ body {
 }
 
 .info {
-    margin-bottom: 150px;
+    padding-top: 150px;
+    margin-bottom: 50px;
 }
 
 .info__inner {
@@ -205,6 +215,7 @@ body {
 }
 
 .characteristics {
+    padding-top: 100px;
     margin-bottom: 150px;
 }
 
@@ -398,6 +409,11 @@ body {
     line-height: 24px;
     letter-spacing: 1.1em;
     cursor: pointer;
+    transition: all .3s;
+}
+
+.form__btn:hover {
+    background-color: #ff4040;
 }
 
 .footer {
