--- a/css/style.css
+++ b/css/style.css
@@ -457,9 +457,58 @@ body {
     margin-right: 10px;
 }
 
+@media(max-width: 1110px )  {
+    .bike__inner {
+        flex-wrap: wrap;
+    }
+
+    .bike__text {
+        max-width: 100%;
+    }
+
+    .bike {
+        padding: 0;
+    }
+    .bike__link {
+        margin-top: 30px;
+    }
+
+    .bike__column {
+        margin-bottom: 30px;
+    }
+
+    .bike__column-slider {
+        max-width: 100%;
+        margin-left: 0;
+    }
+}
+
 @media(max-width: 991px ) {
     .menu {
         margin-right: 0;
+    }
+}
+
+@media(max-width: 670px ) {
+    .bike__title {
+        font-size: 44px;
+        line-height: 57px;
+        margin: 30px 0 5px;
+    }
+
+    .bike__subtitle {
+        margin: 0 0 30px;
+        font-size: 22px;
+        line-height: 29px;
+    }
+
+    .bike__list {
+        flex-wrap: wrap;
+    }
+
+    .bike__list-item {
+        width: 50%;
+        margin-bottom: 15px;
     }
 }
 
@@ -486,6 +535,7 @@ body {
     }
 }
 
+
 @media(max-width: 460px ) {
     .menu__list {
         justify-content: space-between;
@@ -494,6 +544,12 @@ body {
     .menu__link {
         padding: 25px 0;
     }
+
+    .bike__link {
+        padding: 15px;
+        letter-spacing: .9em;
+    }
+
 
 }
 
