--- a/css/style.css
+++ b/css/style.css
@@ -502,6 +502,11 @@ body {
         padding-top: 50px;
         margin-bottom: 50px;
     }
+
+    .slider__img {
+        object-fit: cover;
+        height: 400px;
+    }
 }
 
 @media(max-width: 991px ) {
@@ -581,6 +586,16 @@ body {
     .info__item + .info__item {
         padding-top: 25px;
     }
+        
+    .slider__img {
+        
+        height: 250px;
+    }
+    
+    .slider__item {
+        padding-left: 10px;
+    }
+    
 }
 
 
@@ -596,6 +611,10 @@ body {
     .bike__link {
         padding: 15px;
         letter-spacing: .9em;
+    }
+
+    .slider {
+        display: none;
     }
 
 
