--- a/css/style.css
+++ b/css/style.css
@@ -457,6 +457,17 @@ body {
     margin-right: 10px;
 }
 
+@media(max-width: 1140px ) {
+    .form__bike-img {
+        width: 500px;
+    }
+    
+    .form__bike {
+        top: 45px;
+    }
+}
+
+
 @media(max-width: 1110px )  {
     .bike__inner {
         flex-wrap: wrap;
@@ -507,6 +518,10 @@ body {
         object-fit: cover;
         height: 400px;
     }
+
+    .price {
+        margin-bottom: 50px;
+    }
 }
 
 @media(max-width: 991px ) {
@@ -535,6 +550,36 @@ body {
 
     .characteristics__descr {
         flex-basis: 50%;
+    }
+
+    .form__label-box {
+        margin-bottom: 300px;
+    }
+
+    .form__bike {
+        top: auto;
+        bottom: 85px;
+        left: 0;
+        right: auto;
+    }
+
+    .form__bike-img {
+        width: 415px;
+    }
+
+    .form__bike-price {
+        right: -20%;
+        transform: translateX(100%);
+        left: auto;
+        top: 0;
+    }
+}
+
+@media(max-width: 780px ) {
+    .form__bike-price {
+        right: 0;;
+        top: -55px;
+        transform: translateX(50%);
     }
 }
 
@@ -598,6 +643,32 @@ body {
     
 }
 
+@media(max-width: 580px ) {
+    .form__bike-price {
+        right: auto;
+        top: 50px;
+        transform: translateX(0);
+        left: 0;
+        display: inline-block;
+        font-size: 18px;
+        border: none;
+        width: 100%;
+        border-radius: 0;
+        height: auto;
+    }
+
+    .form__bike-price span {
+        background-color: #131313;
+        color: #fff;
+        display: inline-block;
+        padding: 3px;
+    }
+
+    .form__bike-price::after {
+        display: none;
+    }
+}
+
 
 @media(max-width: 460px ) {
     .menu__list {
@@ -608,7 +679,8 @@ body {
         padding: 25px 0;
     }
 
-    .bike__link {
+    .bike__link, 
+    .form__btn {
         padding: 15px;
         letter-spacing: .9em;
     }
@@ -617,7 +689,33 @@ body {
         display: none;
     }
 
+    .form__bike {
+        bottom: 50px;
+    }
 
+    .form__bike-img {
+        width: 270px;
+    }
+
+    .form__label-box {
+        margin-bottom: 200px;
+    }
+
+    .price__inner {
+        text-align: center;
+    }
+    
+    .form__text {
+        max-width: 100%;
+    }
+
+    .form__label-box {
+        justify-content: center;
+    }
+
+    .form__bike {
+        right: 0;
+    }
 }
 
 @media(max-width: 350px ) {
